--- a/style.css
+++ b/style.css
@@ -6,15 +6,21 @@
 }
 
 body {
-    width: 350px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     background: linear-gradient(to right, #1e3c72, #7aa2e7);
     color: #fff;
     min-height: 10vh;
     display: flex;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    min-height: 100vh;
+    max-height: 120vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-width: 100vw;
 }
 
 header {
@@ -25,7 +31,7 @@ header {
 .background {
     position: absolute;
     top: 250px;
-    left: 100px;
+    left: 530px;
     width: 150%;
     height: 150%;
     filter: blur(0px);
@@ -40,11 +46,15 @@ header {
 }
 .card {
     background-color: rgba(191, 203, 215, 0.1);
-    padding: 30px;
+    padding: 1rem;
     border-radius: 30px;
     text-align: center;
+    margin: 0 auto;
     width: 90%;
-    max-width: 450px;
+    max-width: 360px;
+    max-height: 90vh;
+    overflow: auto;
+    padding: 1rem;
     backdrop-filter: blur(10px);
     box-shadow: 0 10px 25px rgba(15, 18, 23, 0.2);
     animation: fadeInUp 2s ease-in-out;
@@ -87,10 +97,19 @@ h2 {
     border-radius: 15px;
 }
 
+@media (min-width: 600px) {
+  .card {
+    width: 400px;
+    margin: 0 auto;
+  }
+}
+
+
 footer {
-    margin-top: 40px;
+    margin-top: 1rem;
     font-size: 14px;
     opacity: 0.8;
+    padding: 0.5rem;
 }
 
 @keyframes fadeInDown {
