--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     z-index: -1;
 }
 .logo {
-    width: 40x;
+    width: 40px;
     height: 30px;
     border-radius: 50%;
     object-fit: cover;
