--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     z-index: -1;
 }
 .logo {
-    position: center
+    position: center;
     width: 50px;
     height: 30px;
     border-radius: 50%;
